2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* glib/giochannel.c (g_io_channel_write_chars): Fix left_len
	calculation in the from UTF-8 to UTF-8 case: left_len should
	be the number of bytes left in the input buffer rather than
	channel->write_buf. (#96373)

2002-10-27  Tor Lillqvist  <tml@iki.fi>

	* configure.in (G_MODULE_LDFLAGS): Don't set on Win32, only causes
	trouble.
	
	* glib/gmain.c (g_poll): Fix for bug reported by Herman Bloggs
	(http://mail.gnome.org/archives/gtk-devel-list/2002-October/msg00101.html)
	and others. We waited for events only for GPollFDs whose events
	field had G_IO_IN set. We need to wait also for events for
	GPollFDs that have just G_IO_OUT set. Non-blocking sockets in the
	process of being connect()ed are one such case. Also silence a
	couple of gcc warnings.

Fri Oct 18 13:41:30 2002  Manish Singh  <yosh@gimp.org>

	* glib/giochannel.c (g_io_channel_read_line_backend): avoid
	creating negative values out of unsigned values using MAX,
	check to see if the result would be positive before doing
	the calculation.

Tue Oct 15 15:28:47 2002  Manish Singh  <yosh@gimp.org>

	* tests/iochannel-test.c: use gsize instead of int where appropriate
        (64-bit cleanliness fix). Removed leftover line_term cruft.

Tue Oct 15 15:07:45 2002  Manish Singh  <yosh@gimp.org>

	* gmodule/Makefile.am gobject/Makefile.am gthread/Makefile.am:
	add -DG_DISABLED_DEPRECATED

	* tests/gio-test.c tests/mainloop-test.c tests/string-test.c
	tests/testglib.c test/tree-test.c tests/unicode-collate.c
	tests/unicode-normalize.c: Deprecation cleanup

Mon Oct 14 15:51:05 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gdate.c (g_date_fill_parse_tokens): Fix a memory
	leak. (#94550, Sebastian Rittau)

Mon Oct 14 15:36:11 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gcompletion.[ch] (g_completion_complete): Make