@@ -1,3 +1,15 @@
+Mon Nov  4 14:41:48 2002  Owen Taylor  <otaylor@redhat.com>
+ 
+ 	* glib/gbsearcharray.c: Include config.h
+ 	so DISABLE_MEMPOOLS actually has an effect.
+ 	(#96437, Morten Welinder)
+ 
+ 	* tests/uri-test.c: Include <config.h>
+
+Mon Nov  4 10:45:48 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* configure.in: Require pkg-config 0.14. (#97553)
+
 2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* configure.in: Added Belarusian to ALL_LINGUAS
