@@ -1,3 +1,12 @@
+Mon Nov  4 14:42:36 2002  Owen Taylor  <otaylor@redhat.com>
+ 
+ 	* gtype.c gsignal.c gvaluearray.c: Include config.h
+ 	so DISABLE_MEMPOOLS actually has an effect.
+ 	(#96437, Morten Welinder)
+ 
+ 	* gsignal.c: Conditionalize definition of g_handler_ts
+ 	on DISABLE_MEM_POOLS (#96437)
+	
 2002-10-16  Matthias Clasen  <maclas@gmx.de>
 
 	* glib-mkenums.in: Support for template files.
