@@ -1,3 +1,7 @@
+Mon Nov  4 14:45:24 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* gthread-posix.c gthread-solaris.c: Include <config.h>
+
 2002-03-10  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* gthread-posix.c (g_thread_create_posix_impl): Do a comparison,
